--- a/index.html
+++ b/index.html
@@ -46,13 +46,15 @@
         <figure>  
           <img src="./assets/coderHouse-logo.jpg" alt="logo de coderhouse"> 
           <figcaption>  
+            <button>
             <a href="https://www.coderhouse.com/" class="coder">¡Visitalos pinchando aqui!</a>
-          </figcaption>  
+            </button>
+          </figcaption>
        </figure>      
       </p>    
     </div>
   </header>
-<!--Fin del header Header-->
+<!--Fin del header-->
 <!--Inicion del Main-->
   <main class="main">
     <section class="seccion-index-1">
@@ -177,7 +179,7 @@
       <div class="row text-center text-md-left">
         <div class="col-md-3 col-lg-3 col-xl-3 mx-auto mt-3">
           <h4 class="mb-4">Información</h4>
-          <p class="righteous">Esta pagina se ha creado con el proposito de mostrar mis habilidades con bootstrap, espero que sea de su agrado</p>
+          <p class="righteous">Esté footer se ha creado con bootstrap, espero que sea de su agrado</p>
         </div>
         <div class="col-md-3 col-lg-2 col-xl-3 mx-auto mt-3">
           <h4 class="wheat mb-4">Agradecimientos</h4>
@@ -219,14 +221,12 @@
             <div class="text-center text-md-right">
               <ul class="list-unstyled list-inline">
                 <li class="list-inline-item">
-                  <a href="#" class="btn-floating btn-sm text-white text-decoration-none logos">
-                    <i class="fa-brands fa-facebook"></i>
-                    <i class="fa-brands fa-twitter"></i>
-                    <i class="fa-brands fa-square-instagram"></i>
-                    <i class="fa-brands fa-linkedin"></i>
-                    <i class="fa-brands fa-discord"></i>
-                    <i class="fa-brands fa-github"></i>
-                  </a>
+                  <a class="btn-floating btn-sm text-white text-decoration-none logos" href="https://www.facebook.com/"><i class="fa-brands fa-facebook"></i></a>
+                  <a class="btn-floating btn-sm text-white text-decoration-none logos" href="https://twitter.com/?lang=es"><i class="fa-brands fa-twitter"></i></a>
+                  <a class="btn-floating btn-sm text-white text-decoration-none logos" href="https://www.instagram.com/"><i class="fa-brands fa-square-instagram"></i></a>
+                  <a class="btn-floating btn-sm text-white text-decoration-none logos" href="https://ar.linkedin.com/"><i class="fa-brands fa-linkedin"></i></a>
+                  <a class="btn-floating btn-sm text-white text-decoration-none logos" href="https://discord.com/"><i class="fa-brands fa-discord"></i></a>
+                  <a class="btn-floating btn-sm text-white text-decoration-none logos" href="https://github.com/Arias-Manuel"><i class="fa-brands fa-github"></i></a>
                 </li>
               </ul>
             </div>
