--- a/pages/bibliografia.html
+++ b/pages/bibliografia.html
@@ -50,7 +50,7 @@
     <section class="seccion-bibliografia-1">
       <h2>El <span class="span-0">nacimiento </span><span class="span-1">1967-1973</span></h2>
       <div>
-        <img src="../assets/dallasSpurs-Bibliografia.jpg" alt="1°er logo de los Spurs">
+        <img src="../assets/dallasSpurs-Bibliografia.jpg"  alt="1°er logo de los Spurs">
       </div>
         <p>Los San Antonio Spurs comenzó como Dallas Chaparrals de la versión original de la ABA (ASOCIACION DE BASKET AMERICANA) en 1967. Liderados por el entrenador-jugador Cliff Hagan, los Chaparrals fueron uno de los 11 conjuntos que formaron parte de la temporada inaugural de la ABA. 
         </p>
@@ -136,7 +136,7 @@
     </section>
     <section class="seccion-bibliografia-4">
       <h2><span class="span-8">La era de Duncan,</span> <span class="span-9">Parker, Ginobili y</span> <span class="span-10">Popovich</span></h2>
-        <div>
+        <div >
           <img src="../assets/San-Antonio-Spurs-Logo-2002.jpg" alt="4°to Logo de los Spurs">
         </div>
         <p>
@@ -320,13 +320,12 @@
             <div class="text-center text-md-right">
               <ul class="list-unstyled list-inline">
                 <li class="list-inline-item">
-                  <a href="#" class="btn-floating btn-sm text-white text-decoration-none logos">
-                    <i class="fa-brands fa-facebook"></i>
-                    <i class="fa-brands fa-twitter"></i>
-                    <i class="fa-brands fa-square-instagram"></i>
-                    <i class="fa-brands fa-linkedin"></i>
-                    <i class="fa-brands fa-discord"></i>
-                    <i class="fa-brands fa-github"></i>
+                  <a class="btn-floating btn-sm text-white text-decoration-none logos" href="https://www.facebook.com/"><i class="fa-brands fa-facebook"></i></a>
+                  <a class="btn-floating btn-sm text-white text-decoration-none logos" href="https://twitter.com/?lang=es"><i class="fa-brands fa-twitter"></i></a>
+                  <a class="btn-floating btn-sm text-white text-decoration-none logos" href="https://www.instagram.com/"><i class="fa-brands fa-square-instagram"></i></a>
+                  <a class="btn-floating btn-sm text-white text-decoration-none logos" href="https://ar.linkedin.com/"><i class="fa-brands fa-linkedin"></i></a>
+                  <a class="btn-floating btn-sm text-white text-decoration-none logos" href="https://discord.com/"><i class="fa-brands fa-discord"></i></a>
+                  <a class="btn-floating btn-sm text-white text-decoration-none logos" href="https://github.com/Arias-Manuel"><i class="fa-brands fa-github"></i></a>
                   </a>
                 </li>
               </ul>
@@ -342,7 +341,6 @@
     </div>
   </footer>
 <!-------------------------Fin del Footer Con Botstrap + css---------------> 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
 </body>
 </html>
 
