--- a/pages/fanshots.html
+++ b/pages/fanshots.html
@@ -135,14 +135,12 @@
           <div class="text-center text-md-right">
             <ul class="list-unstyled list-inline">
               <li class="list-inline-item">
-                <a href="#" class="btn-floating btn-sm text-white text-decoration-none logos">
-                  <i class="fa-brands fa-facebook"></i>
-                  <i class="fa-brands fa-twitter"></i>
-                  <i class="fa-brands fa-square-instagram"></i>
-                  <i class="fa-brands fa-linkedin"></i>
-                  <i class="fa-brands fa-discord"></i>
-                  <i class="fa-brands fa-github"></i>
-                </a>
+                <a class="btn-floating btn-sm text-white text-decoration-none logos" href="https://www.facebook.com/"><i class="fa-brands fa-facebook"></i></a>
+                <a class="btn-floating btn-sm text-white text-decoration-none logos" href="https://twitter.com/?lang=es"><i class="fa-brands fa-twitter"></i></a>
+                <a class="btn-floating btn-sm text-white text-decoration-none logos" href="https://www.instagram.com/"><i class="fa-brands fa-square-instagram"></i></a>
+                <a class="btn-floating btn-sm text-white text-decoration-none logos" href="https://ar.linkedin.com/"><i class="fa-brands fa-linkedin"></i></a>
+                <a class="btn-floating btn-sm text-white text-decoration-none logos" href="https://discord.com/"><i class="fa-brands fa-discord"></i></a>
+                <a class="btn-floating btn-sm text-white text-decoration-none logos" href="https://github.com/Arias-Manuel"><i class="fa-brands fa-github"></i></a>
               </li>
             </ul>
           </div>
