--- a/pages/productos.html
+++ b/pages/productos.html
@@ -13,7 +13,6 @@
   <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Signika+Negative:wght@500&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Paytone+One&display=swap" rel="stylesheet">
-  <link rel="shortcut icon" type="image/jpg" href="/assets/icons8-flappy-dunk-16.png">
   <link href="https://fonts.googleapis.com/css2?family=Lobster&family=Signika+Negative:wght@500&display=swap" rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
   <script src="https://kit.fontawesome.com/cf7f6d1cb0.js" crossorigin="anonymous"> 
@@ -25,116 +24,291 @@
 </head>
 <body class="body-productos">
 <!--Header-->
-<header class="header-productos">
-  <nav class="nav">
-    <a href="../index.html">
-      <h1>San Antonio Spurs</h1>
-    </a>
-      <div class="nav-links">
-        <input type="checkbox" class="toogle-menu">
-        <div class="hamburguesa"></div>
-        <ul class="mb-0 menu">
-          <li><a href="./bibliografia.html">Bibliografia</a></li>
-          <li><a href="./fanposts.html">FanPost</a></li>
-          <li><a href="./fanshots.html">FanShot</a></li>
-          <li><a href="./productos.html">Productos</a></li>
-          <li><a href="./contacto.html">Contacto</li></a>
-        </ul>
-      </div>
-  </nav>
-  <section class="titulo-productos">
-    <h2>Bienvenidos a la seccion de Productos</h2>
-     <p>En esta pagina podras comprar todo producto relacionados al equipo, esperemos que sea de su agrado</p>
- </section>
-</header>
+  <header class="header-productos">
+    <nav class="nav">
+      <a href="../index.html">
+        <h1>San Antonio Spurs</h1>
+      </a>
+        <div class="nav-links">
+          <input type="checkbox" class="toogle-menu">
+          <div class="hamburguesa"></div>
+          <ul class="mb-0 menu">
+            <li><a href="./bibliografia.html">Bibliografia</a></li>
+            <li><a href="./fanposts.html">FanPost</a></li>
+            <li><a href="./fanshots.html">FanShot</a></li>
+            <li><a href="./productos.html">Productos</a></li>
+            <li><a href="./contacto.html">Contacto</li></a>
+          </ul>
+        </div>
+    </nav>
+    <div class="titulo-productos">
+      <h2>Bienvenidos a la seccion de Productos</h2>
+      <p>En esta pagina podras comprar todo producto relacionados al equipo, esperemos que sea de su agrado</p>
+    </div>
+  </header>
 <!--Fin del header Header-->
 <!--Inicio del contenido de Productos-->
   <main>
-      <article class="seccion-producto-0">
-        <p class="cabeza">JERSEYS</p>
-          <div class="torso-0">
-            <img src="../assets/jerseyDuncan.jpg" alt="Jersey de Tim Duncan">  
-          </div>
-          <div class="torso-1">
-            <img src="../assets/jerseyGenioBili.jpg" alt="Jersey de Manu Ginobili">
-          </div>
-          <div class="torso-2">
-            <img src="../assets/jerseyTony.jpg" alt="Jersey de Tony Parker">
-          </div>
-          <div class="torso-3">
-            <img src="../assets/jerseyRobinson.jpg" alt="Jersey de David Robinson">
-          </div>
-          <div class="pie-0">
-            <img src="../assets/jerseyMurray.jpg" alt="Jersey de DeJounte Murray">
-          </div>
-          <div class="pie-1">
-            <img src="../assets/jerseyPrimo.jpg" alt="Jersey de Joshua Primo">
-          </div>
-          <div class="pie-2">
-            <img src="../assets/landaleJersey.jpg" alt="Jersey de Jock Landale">
-          </div> 
-          <div class="pie-3">
-            <img src="../assets/Personalizada.jpg" alt="Jersey personalizada para poner tu propio nombre y numero">
-          </div>
-    </article>
-    <article class="seccion-producto-1">
-      <p class="cabeza-1">SHORTS, REMERAS Y ACCESORIOS</p>
-        <div class="tronco-0">
-          <img src="../assets/ShortSpursFiesta.jpg" alt="Short color FIESTA SPURS">
+    <div class="container__background-triangle">
+      <div class="triangle triangle1"></div>
+      <div class="triangle triangle2"></div>
+      <div class="triangle triangle3"></div>
+  </div>
+    <div class="jersey__title">
+      <h2>JERSEYS</h2>
+    </div>
+  <div class="container__cards">
+    <div class="card">
+        <div class="cover__card">
+          <h3>Jersey de Tim Duncan</h3>
+            <img src="../assets/jerseyDuncan.jpg" alt="Jersey de Duncan">
         </div>
-        <div class="tronco-1">
-          <img src="../assets/ShortSpursWhite.jpg" alt="Short color blanco">
+        <div class="footer__card">
+            <h3 class="user__name">Precio: 60$</h3>
+            <button>COMPRAR</button>
         </div>
-        <div class="tronco-2">
-          <img src="../assets/ShotSpursBlack.jpg" alt="Short color negro">
+    </div>
+      <div class="card">
+        <div class="cover__card">
+          <h3>Jersey de Manu Ginobili</h3>
+            <img src="../assets/jerseyGenioBili.jpg" alt="Jersey de Ginobili" >
         </div>
-        <div class="tronco-3">
-          <img src="../assets/TshirtGrey.jpg" alt="Remera de los Spurs color gris">
-        </div>
-        <div class="raiz-0">
-          <img src="../assets/TShirtSpurs.jpg" alt="Remera de los Spurs Blacna">
-        </div>
-        <div class="raiz-1">
-          <img src="../assets/CapFiesta.jpg" alt="Gorra color fiesta">
-        </div>
-        <div class="raiz-2">
-          <img src="../assets/CapWhite.jpg" alt="Gorra color blanco">
-        </div>
-        <div class="raiz-3">
-          <img src="../assets/GreyCap.jpg" alt="Gorra color gris">
-        </div>
-    </article>
-    <article class="seccion-producto-2">
-      <p class="cabeza-2">FUNKOS Y BUBBLEHEAD</p>
-        <div class="abdomen-0">
-          <img src="../assets/FunkoGinobili.jpg" alt="Funko de Ginobili">
-        </div>
-        <div class="abdomen-1">
-          <img src="../assets/FunkoGervin.jpg" alt="Funko de Gervin George">
-        </div>
-        <div class="abdomen-2">
-          <img src="../assets/FunkoCoyote.jpg" alt="Funko de la mascota del equipo Spurs">
-        </div>
-        <div class="abdomen-3">
-          <img src="../assets/FunkoPopovich.jpg" alt="Funko de Greg Popovich">
-        </div>
-        <div class="pierna-0">
-          <img src="../assets/BubbleheadDeJoute.jpg" alt="Bubblehead de Dejounte">
-        </div>
-        <div class="pierna-1">
-          <img src="../assets/BubbleheadDeRozan.jpg" alt="Bubblehead de Demar DeRozan">
-        </div>
-        <div class="pierna-2">
-          <img src="../assets/BubbleheadDuncan.jpg" alt="Bubblehead de Tim Duncan">
-        </div>
-        <div class="pierna-3">
-          <img src="../assets/BubbleheadRobinson.jpg" alt="Bubblehead de David Robinson">
-        </div>
-    </article>
+        <div class="footer__card">
+          <h3 class="user__name">Precio: 60$</h3>
+          <button>COMPRAR</button>
+      </div>
+    </div>
+    <div class="card">
+      <div class="cover__card">
+        <h3>Jersey de DeJounte Murray</h3>
+          <img src="../assets/jerseyMurray.jpg" alt="Jersey de Murray">
+      </div>
+      <div class="footer__card">
+          <h3 class="user__name">Precio: 60$</h3>
+          <button>COMPRAR</button>
+      </div>
+    </div>
+    <div class="card">
+      <div class="cover__card">
+        <h3>Jersey de Joshua Primo</h3>
+          <img src="../assets/jerseyPrimo.jpg" alt="Jersey de Joshua Primo">
+      </div>
+      <div class="footer__card">
+          <h3 class="user__name">Precio: 60$</h3>
+          <button>COMPRAR</button>
+      </div>
+    </div>
+    <div class="card">
+      <div class="cover__card">
+        <h3>Jersey de David Robinson</h3>
+          <img src="../assets/jerseyRobinson.jpg" alt="Jersey de David Robinson">
+      </div>
+      <div class="footer__card">
+          <h3 class="user__name">Precio: 60$</h3>
+          <button>COMPRAR</button>
+      </div>
+    </div>
+    <div class="card">
+      <div class="cover__card">
+        <h3>Jersey de Tony parker</h3>
+          <img src="../assets/jerseyTony.jpg" alt="Jersey de Tony parker">
+      </div>
+      <div class="footer__card">
+          <h3 class="user__name">Precio: 60$</h3>
+          <button>COMPRAR</button>
+      </div>
+    </div>
+    <div class="card">
+      <div class="cover__card">
+        <h3>Jersey de Landale</h3>
+          <img src="../assets/landaleJersey.jpg" alt="Jersey de Landale">
+      </div>
+      <div class="footer__card">
+          <h3 class="user__name">Precio: 60$</h3>
+          <button>COMPRAR</button>
+      </div>
+    </div>
+    <div class="card">
+      <div class="cover__card">
+        <h3>Jersey Personalizada</h3>
+          <img src="../assets/Personalizada.jpg" alt="Jersey Personalizada">
+      </div>
+      <div class="footer__card">
+          <h3 class="user__name">Precio: 60$</h3>
+          <button>COMPRAR</button>
+      </div>
+    </div>
+  <div class="accesorios__title">
+    <h2>SHORTS, REMERAS, ACCESORIOS</h2>
+  </div>
+  <div class="container__cards">
+    <div class="card">
+      <div class="cover__card">
+        <h3>Gorra edicion Fiesta "Blanca"</h3>
+          <img src="../assets/CapFiesta.jpg" alt="Jersey de Duncan">
+      </div>
+    <div class="footer__card">
+        <h3 class="user__name">Precio: 60$</h3>
+          <button>COMPRAR</button>
+    </div>
+  </div>
+    <div class="card">
+      <div class="cover__card">
+        <h3>Short edicion Fiesta "Blanca" </h3>
+        <img src="../assets/ShortSpursFiesta.jpg" alt="Short color FIESTA SPURS">
+      </div>
+      <div class="footer__card">
+        <h3 class="user__name">Precio: 60$</h3>
+        <button>COMPRAR</button>
+    </div>
+  </div>
+  <div class="card">
+    <div class="cover__card">
+      <h3>Short color negro</h3>
+        <img src="../assets/ShotSpursBlack.jpg" alt="Short color negro">
+    </div>
+    <div class="footer__card">
+        <h3 class="user__name">Precio: 60$</h3>
+        <button>COMPRAR</button>
+    </div>
+  </div>
+  <div class="card">
+    <div class="cover__card">
+      <h3>Remera color gris</h3>
+        <img src="../assets/TshirtGrey.jpg" alt="Remera de los Spurs color gris">
+    </div>
+    <div class="footer__card">
+      <h3 class="user__name">Precio: 60$</h3>
+      <button>COMPRAR</button>
+    </div>
+  </div>
+  <div class="card">
+    <div class="cover__card">
+      <h3>Remera de los Spurs negra</h3>
+      <img src="../assets/TShirtSpurs.jpg" alt="Remera de los Spurs Negra">
+    </div>
+    <div class="footer__card">
+      <h3 class="user__name">Precio: 60$</h3>
+      <button>COMPRAR</button>
+    </div>
+  </div>
+  <div class="card">
+    <div class="cover__card">
+      <h3>Short color FIESTA SPURS</h3>
+      <img src="../assets/ShortSpursFiesta.jpg" alt="Short color FIESTA SPURS">
+    </div>
+    <div class="footer__card">
+      <h3 class="user__name">Precio: 60$</h3>
+      <button>COMPRAR</button>
+    </div>
+  </div>
+  <div class="card">
+    <div class="cover__card">
+      <h3>Gorra color blanco</h3>
+      <img src="../assets/CapWhite.jpg" alt="Gorra color blanco">
+    </div>
+    <div class="footer__card">
+      <h3 class="user__name">Precio: 60$</h3>
+      <button>COMPRAR</button>
+    </div>
+  </div>
+  <div class="card">
+    <div class="cover__card">
+      <h3>Gorra color gris</h3>
+      <img src="../assets/GreyCap.jpg" class="gorra__gris" alt="Gorra color gris">
+    </div>
+    <div class="footer__card">
+      <h3 class="user__name">Precio: 60$</h3>
+      <button>COMPRAR</button>
+    </div>
+  </div>
+  <div class="accesorios__title">
+    <h2>FUNKOS Y BUBBLEHEADS</h2>
+  </div>
+  <div class="container__cards">
+    <div class="card">
+      <div class="cover__card">
+        <h3>Funko de Manu Ginobili</h3>
+        <img src="../assets/FunkoGinobili.jpg" class="funko__bubble" alt="Funko de Ginobili">
+      </div>
+    <div class="footer__card">
+      <h3 class="user__name">Precio: 60$</h3>
+      <button>COMPRAR</button>
+    </div>
+  </div>
+  <div class="card">
+    <div class="cover__card">
+      <h3>Funko de Gervin George</h3>
+      <img src="../assets/FunkoGervin.jpg" class="funko__bubble"  alt="Funko de Gervin George">
+    </div>
+      <div class="footer__card">
+        <h3 class="user__name">Precio: 60$</h3>
+        <button>COMPRAR</button>
+    </div>
+  </div>
+  <div class="card">
+    <div class="cover__card">
+      <h3>Funko del coyote</h3>
+      <img src="../assets/FunkoCoyote.jpg"  class="funko__bubble"  alt="Funko de la mascota del equipo Spurs">
+    </div>
+    <div class="footer__card">
+        <h3 class="user__name">Precio: 60$</h3>
+        <button>COMPRAR</button>
+    </div>
+  </div>
+  <div class="card">
+    <div class="cover__card">
+      <h3>Funko de Greg Popovich</h3>
+      <img src="../assets/FunkoPopovich.jpg"   class="funko__bubble"  alt="Funko de Greg Popovich">
+    </div>
+    <div class="footer__card">
+      <h3 class="user__name">Precio: 60$</h3>
+      <button>COMPRAR</button>
+    </div>
+  </div>
+  <div class="card">
+    <div class="cover__card">
+      <h3>Bubblehead de Dejounte</h3>
+      <img src="../assets/BubbleheadDeJoute.jpg"  class="funko__bubble"  alt="Bubblehead de Dejounte">
+    </div>
+    <div class="footer__card">
+      <h3 class="user__name">Precio: 60$</h3>
+      <button>COMPRAR</button>
+    </div>
+  </div>
+  <div class="card">
+    <div class="cover__card">
+      <h3>Bubblehead de DeMar DeRozan</h3>
+      <img src="../assets/BubbleheadDeRozan.jpg"  class="funko__bubble"  alt="Bubblehead de Demar DeRozan">
+    </div>
+    <div class="footer__card">
+        <h3 class="user__name">Precio: 60$</h3>
+        <button>COMPRAR</button>
+    </div>
+  </div>
+  <div class="card">
+    <div class="cover__card">
+      <h3>Bubblehead de Tim Duncan</h3>
+      <img src="../assets/BubbleheadDuncan.jpg"  class="funko__bubble"  alt="Bubblehead de Tim Duncan">
+    </div>
+    <div class="footer__card">
+      <h3 class="user__name">Precio: 60$</h3>
+      <button>COMPRAR</button>
+    </div>
+  </div>
+  <div class="card">
+    <div class="cover__card">
+      <h3>Bubblehead de David Robinson</h3>
+        <img src="../assets/BubbleheadRobinson.jpg"  class="funko__bubble"  alt="Bubblehead de David Robinson">
+    </div>
+    <div class="footer__card">
+      <h3 class="user__name">Precio: 60$</h3>
+      <button>COMPRAR</button>
+    </div>
+  </div>
   </main>
-  <!---------------Fin del contenido de productos------------------------------------>
-  <!--------------------------------------------------------------------------------->
-  <!----------------Inicio del Footer con Boostrap +--------------------------------->
+  <!--Fin del contenido de productos->
+  <!--Inicio del Footer con Boostrap +css-->
   <footer class="pt-3 pb-4">
     <div class="container text-center text-md-left">
       <div class="row text-center text-md-left">
@@ -181,15 +355,13 @@
            </ul> 
             <div class="text-center text-md-right">
               <ul class="list-unstyled list-inline">
-                <li class="list-inline-item">
-                  <a href="#" class="btn-floating btn-sm text-white text-decoration-none logos">
-                    <i class="fa-brands fa-facebook"></i>
-                    <i class="fa-brands fa-twitter"></i>
-                    <i class="fa-brands fa-square-instagram"></i>
-                    <i class="fa-brands fa-linkedin"></i>
-                    <i class="fa-brands fa-discord"></i>
-                    <i class="fa-brands fa-github"></i>
-                  </a>
+                <li class="list-inline-item">         
+                  <a class="btn-floating btn-sm text-white text-decoration-none logos" href="https://www.facebook.com/"><i class="fa-brands fa-facebook"></i></a>
+                  <a class="btn-floating btn-sm text-white text-decoration-none logos" href="https://twitter.com/?lang=es"><i class="fa-brands fa-twitter"></i></a>
+                  <a class="btn-floating btn-sm text-white text-decoration-none logos" href="https://www.instagram.com/"><i class="fa-brands fa-square-instagram"></i></a>
+                  <a class="btn-floating btn-sm text-white text-decoration-none logos" href="https://ar.linkedin.com/"><i class="fa-brands fa-linkedin"></i></a>
+                  <a class="btn-floating btn-sm text-white text-decoration-none logos" href="https://discord.com/"><i class="fa-brands fa-discord"></i></a>
+                  <a class="btn-floating btn-sm text-white text-decoration-none logos" href="https://github.com/Arias-Manuel"><i class="fa-brands fa-github"></i></a>
                 </li>
               </ul>
             </div>
