--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -90,7 +90,7 @@
             </div>
             <div class="d-flex justify-content-center justify-content-xl-center form-group mt-4">
               <label class="fs-2 p-2" for="tallas">Tallas:</label>
-              <select class="fs-5" name="tallas">
+              <select class="fs-5 bg-secondary" name="tallas">
                 <optgroup label="Tallas Grandes">
                   <option value="L">Large</option>
                 </optgroup>
