--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -19,6 +19,7 @@
   </script>
   <link href="https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap" rel="stylesheet"> 
   </script>
+  <link rel="icon" href="../assets/icons8-baloncesto-32.png">
     <title>FanPageSpurs - Contactos</title>
 </head>
 <body class="body-contacto">
