--- a/pages/fanposts.html
+++ b/pages/fanposts.html
@@ -19,6 +19,7 @@
     </script>
     <link href="https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap" rel="stylesheet"> 
     </script>
+    <link rel="icon" href="../assets/icons8-baloncesto-32.png">
     <title>FanPageSpurs- Fanposts</title>
 </head>
 <body class="body-fanposts">
