--- a/pages/productos.html
+++ b/pages/productos.html
@@ -18,8 +18,7 @@
   <script src="https://kit.fontawesome.com/cf7f6d1cb0.js" crossorigin="anonymous"> 
   </script>
   <link href="https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap" rel="stylesheet"> 
-  </script>
-    </script>
+  <link rel="icon" href="../assets/icons8-baloncesto-32.png">
     <title>FanPageSpurs - Productos</title>
 </head>
 <body class="body-productos">
