--- a/pages/fanposts.html
+++ b/pages/fanposts.html
@@ -41,12 +41,12 @@
         </ul>
       </div>
   </nav>
-  <section class="seccion-fanposts-0">
+  <div class="seccion-fanposts-0">
     <h2>FANPOSTS</h2>
       <p>
         Bienvenido al foro donde se podra colocar posteo puro. Utilizen los canales correspondiente. ¡Saludos!
       </p>
-  </section>
+    </div>
 </header>
 <!--Fin del header Header-->
 <!--Inicio del Nav bar desktop-->
