--- a/pages/bibliografia.html
+++ b/pages/bibliografia.html
@@ -12,7 +12,6 @@
     <link href="https://fonts.googleapis.com/css2?family=Anton&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Signika+Negative:wght@500&display=swap" rel="stylesheet">
-    <link rel="shortcut icon" type="image/jpg" href="/assets/icons8-flappy-dunk-16.png">
     <link href="https://fonts.googleapis.com/css2?family=Lobster&family=Signika+Negative:wght@500&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap" rel="stylesheet">
@@ -39,10 +38,10 @@
         </ul>
       </div>
   </nav>
-  <section class="seccion-bibliografia-0">
+  <div class="seccion-bibliografia-0">
     <h2>LA HISTORIA DE LOS SAN ANTONIO SPURS</h2>
       <p>Damos inicio a la trayectoria de un equipo colosal que siempre ha dado todo a para ganar.</p>
-  </section>
+  </div>
 </header>
 <!--Fin del header Header-->
 <!--Inicio del contenido de bibliografia--->
