--- a/pages/fanshots.html
+++ b/pages/fanshots.html
@@ -12,7 +12,6 @@
     <link href="https://fonts.googleapis.com/css2?family=Anton&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Signika+Negative:wght@500&display=swap" rel="stylesheet">
-    <link rel="shortcut icon" type="image/jpg" href="/assets/icons8-flappy-dunk-16.png">
     <link href="https://fonts.googleapis.com/css2?family=Lobster&family=Signika+Negative:wght@500&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
     <script src="https://kit.fontawesome.com/cf7f6d1cb0.js" crossorigin="anonymous"> 
@@ -41,10 +40,10 @@
           </ul>
         </div>
     </nav>
-    <section class="seccion-fanshots-0">
+    <div class="seccion-fanshots-0">
       <h2>FAN-SHOTS</h2>
         <p>Bienvenido al lugar donde se podra colocar todo el contenido multimedia</p>
-    </section>
+    </div>
   </header>
 <!--Fin del header Header-->
 <!--Inicio del contenido de fanshot-->
