--- a/pages/productos.html
+++ b/pages/productos.html
@@ -15,8 +15,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Paytone+One&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Lobster&family=Signika+Negative:wght@500&display=swap" rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
-  <script src="https://kit.fontawesome.com/cf7f6d1cb0.js" crossorigin="anonymous"> 
-  </script>
+  <script src="https://kit.fontawesome.com/cf7f6d1cb0.js" crossorigin="anonymous"> </script>
   <link href="https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap" rel="stylesheet"> 
   <link rel="icon" href="../assets/icons8-baloncesto-32.png">
     <title>FanPageSpurs - Productos</title>
